versioned_docs/version-2.7.5/Classes/Manager.mdx
---
id: Manager
title: Manager
description: Manager
slug: /classes/Manager
sidebar_position: 0
sidebar_label: Manager
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

## Constructor

<Tabs>
    <TabItem value="manager" label="Manager : options" default>
        ```js
        new Magmastream.Manager(options: ManagerOptions)
        ```

        | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                                                | <i className="fa-solid fa-list"/> Description                                                                                                                                         |
        |:-------------------------------------------|:--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
        | `autoPlay`                                 | [boolean](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean)                                                                                               | Whether players should automatically play the next song.                                                                                                                          |
        | `autoPlaySearchPlatform`                   | [`SearchPlatform`](../Enums/SearchPlatform.mdx)                                                                                                                                                               | The search platform autoplay should use. Failback to Youtube if not found.                                                                                                        |
        | `clientName`                               | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String)                                                                                                 | Value to use for the `Client-Name` header.                                                                                                                                        |
        | `defaultSearchPlatform`                    | [`SearchPlatform`](../Enums/SearchPlatform.mdx)                                                                                                                                                               | The default search platform to use.                                                                                                                                               |
        | `lastFmApiKey`                             | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [apiKey](https://www.last.fm/api/authentication)                                       | The last.fm API key. If you need to create one go [here](https://www.last.fm/api/account/create) or if you already have one, get it from [here](https://www.last.fm/api/accounts). |
        | `nodes`                                    | [`Node[]`](../Typedefs/Node.mdx#nodeoptions)                                                                                                                                                           | The array of nodes to connect to.                                                                                                                                                 |
        | `plugins`                                  | [`Plugin[]`](./Plugin.mdx)                                                                                                                                                                        | A array of plugins to use.                                                                                                                                                        |
        | `replaceYouTubeCredentials`                | [boolean](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean)                                                                                               | Whether the YouTube video titles should be replaced if the Author does not exactly match.                                                                                         |
        | `send`                                     | [function](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function) as [send()](#send)                                                                          | Function to send data to the websocket.                                                                                                                                           |
        | `trackPartial`                             | [`string[]`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String)                                                                                                                                                                                                  | An array of track properties to keep. `track` will always be present.                                                                                                                                                                                  |
        | `usePriority`                              | [boolean](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean)                                                                                                                                                                                                    | Use priority mode over least amount of player or load?                                                                                                                                                                                  |
        | `useNode`                                  | [`UseNode`](../Enums/UseNodeOptions.mdx)                                                                                                                                                                                                  |  Use the least amount of players or least load?                                                                                                                                                                                 |

        ### send()
        <Tabs>
            <TabItem value="Parameters" label="Parameters" default>

                > Function to send data to the websocket.
                >
                > | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                            | <i className="fa-solid fa-list"/> Description |
                > | :--------------------------------------------- | :------------------------------------------------------------------------------------------------ | :-------------------------------------------- |
                > | `id`                                           | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) | The ID of the node to send the data to.       |
                > | `payload`                                      | [`Payload`](../Typedefs/Payload.mdx)                                                              | The payload to send                           |

            </TabItem>
            <TabItem value="Default usage" label="Default usage" default>
                ```js
                    new Magmastream.Manager({
                        ...ManagerOptions,
                        send: (id, payload) => {
                            const guild = client.guilds.cache.get(id);
                            // NOTE: FOR ERIS YOU NEED JSON.stringify() THE PAYLOAD
                            if (guild) guild.shard.send(payload);
                        },
                    })
                ```
            </TabItem>
        </Tabs>
    </TabItem>

</Tabs>

## Table of contents

| <i className="fa-solid fa-pen"/> Properties | <i className="fa-solid fa-boxes-stacked"/> Methods | <i className="fa-regular fa-calendar"/> Events |
| :------------------------------------------ | :------------------------------------------------- | :--------------------------------------------- |
| [players](#players)                         | [create()](#create)                                | [chapterStarted](#chapterstarted)              |
| [nodes](#nodes)                             | [createNode()](#createnode)                        | [chaptersLoaded](#chaptersloaded)              |
| [options](#options)                         | [decodeTrack()](#decodetrack)                      | [debug](#debug)                                |
|                                             | [decodeTracks()](#decodetracks)                    | [nodeConnect](#nodeconnect)                    |
|                                             | [destroy()](#destroy)                              | [nodeCreate](#nodecreate)                      |
|                                             | [destroyNode()](#destroynode)                      | [nodeDestroy](#nodedestroy)                    |
|                                             | [get()](#get)                                      | [nodeDisconnect](#nodedisconnect)              |
|                                             | [init()](#init)                                    | [nodeError](#nodeerror)                        |
|                                             | [loadPlayerStates()](#loadplayerstates)            | [nodeRaw](#noderaw)                            |
|                                             | [on()](#on)                                        | [nodeReconnect](#nodereconnect)                |
|                                             | [savePlayerState()](#saveplayerstate)              | [playerCreate](#playercreate)                  |
|                                             | [search()](#search)                                | [playerDestroy](#playerdestroy)                |
|                                             | [updateVoiceState()](#updatevoicestate)            | [playerDisconnect](#playerdisconnect)          |
|                                             | [useableNodes()](#useablenodes)                    | [playerMove](#playermove)                      |
|                                             |                                                    | [playerStateUpdate](#playerstateupdate)        |
|                                             |                                                    | [queueEnd](#queueend)                          |
|                                             |                                                    | [segmentSkipped](#segmentskipped)              |
|                                             |                                                    | [segmentsLoaded](#segmentsloaded)              |
|                                             |                                                    | [socketClosed](#socketclosed)                  |
|                                             |                                                    | [trackEnd](#trackend)                          |
|                                             |                                                    | [trackError](#trackerror)                      |
|                                             |                                                    | [trackStart](#trackstart)                      |
|                                             |                                                    | [trackStuck](#trackstuck)                      |
|                                             |                                                    |                                                |

## Properties

### players

<span className="info badge">readonly</span>

> The map of players.
>
> Returns: [Collection](https://discord.js.org/docs/packages/collection/main/Collection:class)\<[string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String), [`Player`](./Player.mdx)>

### nodes

<span className="info badge">readonly</span>

> The map of nodes.
>
> Returns: [Collection](https://discord.js.org/docs/packages/collection/main/Collection:class)\<[string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String), [`Node`](./Node.mdx)>

### options

<span className="info badge">readonly</span>

> The options that were set.
>
> Returns: [ManagerOptions](#constructor)

## Methods

### create()

> Creates a player or returns one if it already exists.<br/>
>
> Returns: [`Player`](./Player.mdx)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                    | <i className="fa-solid fa-list"/> Description |
> | :--------------------------------------------- | :-------------------------------------------------------- | :-------------------------------------------- |
> | `options`                                      | [`playerOptions{}`](../Typedefs/Player.mdx#playeroptions) | The options to create the player with.        |

### createNode()

> Creates a new node or returns an existing one if it already exists.
>
> Returns: [`Node`](../Classes/Node.mdx)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type              | <i className="fa-solid fa-list"/> Description |
> | :--------------------------------------------- | :-------------------------------------------------- | :-------------------------------------------- |
> | `options`                                      | [`nodeOptions{}`](../Typedefs/Node.mdx#nodeoptions) | The options to create the node with.          |

### decodeTrack()

> Decodes a base64 encoded track and returns a TrackData.
>
> Returns: [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)[\<`trackData{}`>](../Typedefs/Track.mdx#trackdata)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                  | <i className="fa-solid fa-list"/> Description |
> | :--------------------------------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------------------------------------------- |
> | `track`                                        | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [base64](https://developer.mozilla.org/en-US/docs/Glossary/Base64) | The base64 encoded track string.              |

### decodeTracks()

> Decodes an array of base64 encoded tracks and returns an array of TrackData.<br/>
> Emits a debug event with the tracks being decoded.
>
> Returns: [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)[\<`trackData{}[]`>](../Typedefs/Track.mdx#trackdata)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                    | <i className="fa-solid fa-list"/> Description |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | :-------------------------------------------- |
> | `tracks`                                       | [string[]](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [base64](https://developer.mozilla.org/en-US/docs/Glossary/Base64) | The base64 encoded track string.              |

### destroy()

> Destroys a player if it exists and cleans up inactive players.
>
> Returns: [void](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                                 | <i className="fa-solid fa-list"/> Description |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------------------------------------------- |
> | `guildId`                                      | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [GuildId](https://discord.js.org/docs/packages/discord.js/14.17.3/Guild:Class#id) | The guild ID of the player to destroy.        |

### destroyNode()

> Destroys a node if it exists. Emits a debug event if the node is found and destroyed.
>
> Returns: [void](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                            | <i className="fa-solid fa-list"/> Description |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------ | :-------------------------------------------- |
> | `identifier`                                   | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) | The identifier of the node to destroy.        |

### init()

> Initiates the Manager.
>
> Returns: [this](#properties)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                                           | <i className="fa-solid fa-list"/> Description |
> | :--------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------------------------------------------- |
> | `clientId`                                     | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [ClientUserId](https://discord.js.org/docs/packages/discord.js/14.17.3/ClientUser:Class#id) | The Discord client ID (required).             |

### loadPlayerStates()

> Loads player states from the JSON file.
>
> Returns: [void](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                         | <i className="fa-solid fa-list"/> Description             |
> | :--------------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------- | :-------------------------------------------------------- |
> | `nodeId`                                       | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [node identifier](/docs/Classes/Node.mdx) | The ID of the node to load player states from (required). |

### get()

> Returns a player or undefined if it does not exist.
>
> Returns: [`Player`](./Player.mdx) | [undefined](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Undefined)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                                 | <i className="fa-solid fa-list"/> Description |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------------------------------------------- |
> | `guild`                                        | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [GuildId](https://discord.js.org/docs/packages/discord.js/14.17.3/Guild:Class#id) | The guild ID of the player to retrieve.       |

### on()

> Attaches an event listener to the manager.
>
> Returns: [this](#properties)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                         | <i className="fa-solid fa-list"/> Description   |
> | :--------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------- | :---------------------------------------------- |
> | `event`                                        | [<i className="fa-regular fa-rectangle-list" style={{ fontSize: '0.8em' }}/> ManagerEventType](../Enums/ManagerEventTypes.mdx) | The event to listen for.                        |
> | `listener`                                     | [function](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function)                          | The function to call when the event is emitted. |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on('trackStart', (player, track) => {
            console.log(`Now playing ${track.title} in ${player.guildId}`);
        });
        ```
    </TabItem>

</Tabs>

### savePlayerState()

> Saves player states to the JSON file.
>
> Returns: [void](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                                 | <i className="fa-solid fa-list"/> Description |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------------------------------------------- |
> | `guildId`                                      | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [GuildId](https://discord.js.org/docs/packages/discord.js/14.17.3/Guild:Class#id) | The guild ID of the player to save            |

### search()

> Searches the enabled sources based off the URL or the `source` property.
>
> Returns: [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)[\<`searchResult{}`>](../Typedefs/Search.mdx#searchresult)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                               | <i className="fa-solid fa-list"/> Description |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------------------------------------------- |
> | `query`                                        | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) \| [`searchQuery{}`](../Typedefs/Search.mdx#searchquery)           | Query to search.                              |
> | `requester`                                    | [User](https://discord.js.org/docs/packages/discord.js/14.17.3/User:Class) \| [ClientUser](https://discord.js.org/docs/packages/discord.js/14.17.3/ClientUser:Class) | The user who requested the track.             |

### updateVoiceState()

> Sends voice data to the Lavalink server.
>
> Returns: [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)[\<void>](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type   | <i className="fa-solid fa-list"/> Description |
> | :--------------------------------------------- | :--------------------------------------- | :-------------------------------------------- |
> | `data`                                         | VoicePacket \| VoiceServer \| VoiceState | The timescale options to apply.               |

<Tabs>
    <TabItem value="Example required for use" label="Example required to use" default>
        ```js
        const { Client } = require('discord.js');
        const { Manager } = require('magmastream');

        const client = new Client({
            ...ClientOptions
        })

        const manager = new Manager({
            ...ManagerOptions
        })

        // Required for magmastream to work
        client.on(Events.Raw, (data) => {
            manager.updateVoiceState(data);
        })
        ```
    </TabItem>

</Tabs>

### useableNodes()

<span className="info badge">get</span>

> Returns the node to use based on the configured [useNode](#constructor) and [usePriority](#constructor) options.<br/><br/>
> If [usePriority](#constructor) is true, the node is chosen based on priority, otherwise it is chosen based on the [useNode](#constructor) option.<br/>
> If [useNode](#constructor) is "leastLoad", the node with the lowest load is chosen, if it is "leastPlayers", the node with the fewest players is chosen.<br/>
> If [usePriority](#constructor) is false and [useNode](#constructor) is not set, the node with the lowest load is chosen.
>
> Returns: [`Node`](../Classes/Node.mdx)

## Events

### ChapterStarted

<span className="info badge">[ManagerEventTypes : ChapterStarted](../Enums/ManagerEventTypes.mdx#chapterStarted)</span>

> Emitted when a track has started a chapter.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                   |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                                                 |
> | `track`                                        | [`Track{}`](../Typedefs/Track.mdx#track) \| [`UnresolvedTrack{}`](../Typedefs/Track.mdx#unresolvedtrack) |
> | `payload`                                      | [`SponsorBlockChapterStarted{}`](../Typedefs/SponsorBlock.mdx#sponsorblockchapterstarted)                |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.ChapterStarted, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### ChaptersLoaded

<span className="info badge">[ManagerEventTypes : ChaptersLoaded](../Enums/ManagerEventTypes.mdx#chaptersLoaded)</span>

> Emitted when a track has loaded chapters.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                   |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                                                 |
> | `track`                                        | [`Track{}`](../Typedefs/Track.mdx#track) \| [`UnresolvedTrack{}`](../Typedefs/Track.mdx#unresolvedtrack) |
> | `payload`                                      | [`SponsorBlockChaptersLoaded{}`](../Typedefs/SponsorBlock.mdx#sponsorblockchaptersloaded)                |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.ChapterStarted, (player, track, payload) => {
        //Your code
    })
        ```
    </TabItem>

</Tabs>

### Debug

<span className="info badge">[ManagerEventTypes : Debug](../Enums/ManagerEventTypes.mdx#debug)</span>

> Emitted when a track has loaded chapters.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                            |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------ |
> | `info`                                         | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
        ...ManagerOptions
    })

        manager.on(ManagerEventTypes.Debug, (info) => {
            console.log(`Debug from magmastream: ${info}`);
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### NodeConnect

<span className="info badge">[ManagerEventTypes : NodeConnect](../Enums/ManagerEventTypes.mdx#nodeConnect)</span>

> Emitted when a Node connects.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type |
> | :--------------------------------------------- | :------------------------------------- |
> | `node`                                         | [`Node`](./Node.mdx)                   |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.NodeConnect, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### NodeCreate

<span className="info badge">[ManagerEventTypes : NodeCreate](../Enums/ManagerEventTypes.mdx#nodeCreate)</span>

> Emitted when a Node is created.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type |
> | :--------------------------------------------- | :------------------------------------- |
> | `node`                                         | [`Node`](./Node.mdx)                   |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.NodeCreate, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### NodeDestroy

<span className="info badge">[ManagerEventTypes : NodeDestroy](../Enums/ManagerEventTypes.mdx#nodeDestroy)</span>

> Emitted when a Node is destroyed.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type |
> | :--------------------------------------------- | :------------------------------------- |
> | `node`                                         | [`Node`](./Node.mdx)                   |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.NodeDestroy, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### NodeDisconnect

<span className="info badge">[ManagerEventTypes : NodeDisconnect](../Enums/ManagerEventTypes.mdx#nodeDisconnect)</span>

> Emitted when a Node is disconnects.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                                                                  |
> | :--------------------------------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
> | `node`                                         | [`Node`](./Node.mdx)                                                                                                                                                                                                    |
> | `reason`                                       | \{ code: [number](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number), reason: [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) } |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.NodeDisconnect, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### NodeError

<span className="info badge">[ManagerEventTypes : NodeError](../Enums/ManagerEventTypes.mdx#nodeError)</span>

> Emitted when a Node has an error.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                          |
> | :--------------------------------------------- | :---------------------------------------------------------------------------------------------- |
> | `node`                                         | [`Node`](./Node.mdx)                                                                            |
> | `error`                                        | [Error](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.NodeError, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### NodeRaw

<span className="info badge">[ManagerEventTypes : NodeRaw](../Enums/ManagerEventTypes.mdx#nodeRaw)</span>

> Emitted whenever any Lavalink event is received.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type |
> | :--------------------------------------------- | :------------------------------------- |
> | `payload`                                      | unknown                                |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.NodeRaw, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### NodeReconnect

<span className="info badge">[ManagerEventTypes : NodeReconnect](../Enums/ManagerEventTypes.mdx#nodeReconnect)</span>

> Emitted when a Node reconnects.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type |
> | :--------------------------------------------- | :------------------------------------- |
> | `node`                                         | [`Node`](./Node.mdx)                   |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.NodeReconnect, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### PlayerCreate

<span className="info badge">[ManagerEventTypes : PlayerCreate](../Enums/ManagerEventTypes.mdx#playerCreate)</span>

> Emitted when a player is created.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type |
> | :--------------------------------------------- | :------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)               |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.PlayerCreate, (player) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### PlayerDestroy

<span className="info badge">[ManagerEventTypes : PlayerDestroy](../Enums/ManagerEventTypes.mdx#playerDestroy)</span>

> Emitted when a player is destroyed.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type |
> | :--------------------------------------------- | :------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)               |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.PlayerDestroy, (player) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### PlayerDisconnect

<span className="info badge">[ManagerEventTypes : PlayerDisconnect](../Enums/ManagerEventTypes.mdx#playerDisconnect)</span>

> Emitted when a Player disconnects.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                                               |
> | :--------------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                                                                                                                                             |
> | `oldChannel`                                   | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [GuildChannelId](https://discord.js.org/docs/packages/discord.js/14.17.3/GuildChannel:Class#id) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.PlayerDisconnect, (player, oldChannel) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### PlayerMove

<span className="info badge">[ManagerEventTypes : PlayerMove](../Enums/ManagerEventTypes.mdx#playerMove)</span>

> Emitted when a player is moved to a new voice channel.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                                               |
> | :--------------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                                                                                                                                             |
> | `initChannel`                                  | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [GuildChannelId](https://discord.js.org/docs/packages/discord.js/14.17.3/GuildChannel:Class#id) |
> | `newChannel`                                   | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [GuildChannelId](https://discord.js.org/docs/packages/discord.js/14.17.3/GuildChannel:Class#id) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.NodeDisconnect, (player, initChannel, newChannel) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### PlayerStateUpdate

<span className="info badge">[ManagerEventTypes : PlayerStateUpdate](../Enums/ManagerEventTypes.mdx#playerStateUpdate)</span>

> Emitted when the state of the player has been changed either player paused/resumed or the loop modes have been toggled on or off.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                 |
> | :--------------------------------------------- | :--------------------------------------------------------------------- |
> | `oldPlayer`                                    | [`Player`](./Player.mdx)                                               |
> | `newPlayer`                                    | [`Player`](./Player.mdx)                                               |
> | `changeType`                                   | [`PlayerStateUpdateEvent{}`](../Typedefs/Player.mdx#playerStateUpdate) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.PlayerStateUpdate, (oldPlayer, newPlayer, changeType) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### QueueEnd

<span className="info badge">[ManagerEventTypes : QueueEnd](../Enums/ManagerEventTypes.mdx#queueEnd)</span>

> Emitted when a player queue ends.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                |
> | :--------------------------------------------- | :---------------------------------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                                              |
> | `track`                                        | [`Track{}`](../Typedefs/Track.mdx#track) \| [`UnresolvedTrack{}`](../Typedefs/Track.#unresolvedtrack) |
> | `payload`                                      | [`TrackEndEvent{}`](../Typedefs/Track.mdx#trackendevent)                                              |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.QueueEnd, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### SegmentSkipped

<span className="info badge">[ManagerEventTypes : SegmentSkipped](../Enums/ManagerEventTypes.mdx#segmentSkipped)</span>

> Emitted when a track has skipped a segment.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                             |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                                           |
> | `track`                                        | [`Track{}`](../Typedefs/Track.mdx) \| [`UnresolvedTrack{}`](../Typedefs/Track.mdx#unresolvedtrack) |
> | `payload`                                      | [`SponsorBlockSegmentSkipped{}`](../Typedefs/SponsorBlock.mdx#sponsorblocksegmentskipped)          |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.SegmentSkipped, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### SegmentsLoaded

<span className="info badge">[ManagerEventTypes : SegmentsLoaded](../Enums/ManagerEventTypes.mdx#segmentsLoaded)</span>

> Emitted when a track has loaded segments.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                             |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                                           |
> | `track`                                        | [`Track{}`](../Typedefs/Track.mdx) \| [`UnresolvedTrack{}`](../Typedefs/Track.mdx#unresolvedtrack) |
> | `payload`                                      | [`SponsorBlockSegmentsLoaded{}`](../Typedefs/SponsorBlock.mdx#sponsorblocksegmentsloaded)          |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.SegmentsLoaded, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### SocketClosed

<span className="info badge">[ManagerEventTypes : SocketClosed](../Enums/ManagerEventTypes.mdx#socketClosed)</span>

> Emitted when a voice connection is closed.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                     |
> | :--------------------------------------------- | :------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                   |
> | `payload`                                      | [`WebSocketClosedEvent{}`](../Typedefs/WebSocket.mdx#websocketclosedevent) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.SocketClosed, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### TrackEnd

<span className="info badge">[ManagerEventTypes : TrackEnd](../Enums/ManagerEventTypes.mdx#trackEnd)</span>

> Emitted when a track ends.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                   |
> | :--------------------------------------------- | :------------------------------------------------------- |
> | `player`                                       | [`Player`](./Node.mdx)                                   |
> | `track`                                        | [`Track{}`](../Typedefs/Track.mdx#track)                 |
> | `payload`                                      | [`TrackEndEvent{}`](../Typedefs/Track.mdx#trackendevent) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.TrackEnd, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### TrackError

<span className="info badge">[ManagerEventTypes : TrackError](../Enums/ManagerEventTypes.mdx#trackError)</span>

> Emitted when a track has an error during playback.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                   |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Node.mdx)                                                                                   |
> | `track`                                        | [`Track{}`](../Typedefs/Track.mdx#track) \| [`UnresolvedTrack{}`](../Typedefs/Track.mdx#unresolvedtrack) |
> | `payload`                                      | [`TrackExceptionEvent{}`](../Typedefs/Track.mdx#trackexceptionevent)                                     |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.TrackError, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### TrackStart

<span className="info badge">[ManagerEventTypes : TrackStart](../Enums/ManagerEventTypes.mdx#trackStart)</span>

> Emitted when a track starts.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                       |
> | :--------------------------------------------- | :----------------------------------------------------------- |
> | `player`                                       | [`Player`](./Node.mdx)                                       |
> | `track`                                        | [`Track{}`](../Typedefs/Track.mdx#track)                     |
> | `payload`                                      | [`TrackStartEvent{}`](../Typedefs/Track.mdx#trackstartevent) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.TrackStart, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

### TrackStuck

<span className="info badge">[ManagerEventTypes : TrackStuck](../Enums/ManagerEventTypes.mdx#trackStuck)</span>

> Emitted when a track gets stuck during playback.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                       |
> | :--------------------------------------------- | :----------------------------------------------------------- |
> | `player`                                       | [`Player`](./Node.mdx)                                       |
> | `track`                                        | [`Track{}`](../Typedefs/Track.mdx#track)                     |
> | `payload`                                      | [`TrackStuckEvent{}`](../Typedefs/Track.mdx#trackstuckevent) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.TrackStuck, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>
