versioned_docs/version-2.8.1/Classes/Manager.mdx
---
id: manager-class
title: "Class : Manager"
description: The Manager class is the main class that manages all the players and nodes.
slug: /classes/Manager
sidebar_position: 0
sidebar_label: Manager
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

## Constructor {#constructor}

<Tabs>
    <TabItem value="manager" label="Manager : options" default>
        ```js
        new Magmastream.Manager(options: ManagerOptions)
        ```

        | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                                           | <i className="fa-solid fa-list"/> Description                                                                                                                                      |
        |:-----------------------------------------------|:-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
        | `usePriority`                                  | [boolean](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean)                                                                                              | Use priority mode over least amount of player or load?                                                                                                                             |
        | `useNode`                                      | [<i className="fa-solid fa-bars-staggered" /> UseNode](../Enums/UseNodeOptions.mdx)                                                                              | Use the least amount of players or least load?                                                                                                                                     |
        | `nodes`                                        | [`Node[]`](../Typedefs/Node/Node.mdx#node)                                                                                                                                         | The array of nodes to connect to.                                                                                                                                                  |
        | `clientId`                                     | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [`ClientUser.id`](https://discord.js.org/docs/packages/discord.js/14.17.3/ClientUser:Class#id) | The client ID to use.                                                                                                                                                              |
        | `clientName`                                   | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String)                                                                                                | Value to use for the `Client-Name` header.                                                                                                                                         |
        | `plugins`                                      | [`Plugin[]`](./Plugin.mdx)                                                                                                                                                                       | A array of plugins to use.                                                                                                                                                         |
        | `autoPlay`                                     | [boolean](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean)                                                                                              | Whether players should automatically play the next song.                                                                                                                           |
        | `autoPlaySearchPlatform`                       | [<i className="fa-solid fa-bars-staggered" /> SearchPlatform](../Enums/SearchPlatform.mdx)                                                                       | The search platform autoplay should use. Failback to Youtube if not found.                                                                                                         |
        | `trackPartial`                                 | [`string[]`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String)                                                                                            | An array of track properties to keep. `track` will always be present.                                                                                                              |
        | `defaultSearchPlatform`                        | [<i className="fa-solid fa-bars-staggered" /> SearchPlatform](../Enums/SearchPlatform.mdx)                                                                       | The default search platform to use.                                                                                                                                                |
        | `replaceYouTubeCredentials`                    | [boolean](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean)                                                                                              | Whether the YouTube video titles should be replaced if the Author does not exactly match.                                                                                          |
        | `lastFmApiKey`                                 | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [`apiKey`](https://www.last.fm/api/authentication)                                            | The last.fm API key. If you need to create one go [here](https://www.last.fm/api/account/create) or if you already have one, get it from [here](https://www.last.fm/api/accounts). |
        | `send`                                         | [function](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function) as [`send()`](#send)                                                                         | Function to send data to the websocket.                                                                                                                                            |

        ---

        ### send(id, payload) \{#send}

        <Tabs>
            <TabItem value="Parameters" label="Parameters" default>

                > Function to send data to the websocket.
                >
                > | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                            | <i className="fa-solid fa-list"/> Description |
                > | :--------------------------------------------- | :------------------------------------------------------------------------------------------------ | :-------------------------------------------- |
                > | `id`                                           | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) | The ID of the node to send the data to.       |
                > | `payload`                                      | [`Payload`](../Typedefs/Manager/Payload.mdx)                                                              | The payload to send                           |

            </TabItem>
            <TabItem value="usage-send-function" label="Usage" default>
                ```js
                new Magmastream.Manager({
                    ...ManagerOptions,
                    send: (id, payload) => {
                        const guild = client.guilds.cache.get(id);
                        // NOTE: FOR ERIS YOU NEED JSON.stringify() THE PAYLOAD
                        if (guild) guild.shard.send(payload);
                    },
                })
                ```
            </TabItem>
        </Tabs>
    </TabItem>

</Tabs>

## Table of contents {#toc}

| <i className="fa-solid fa-pen"/> Properties | <i className="fa-solid fa-boxes-stacked"/> Methods | <i className="fa-regular fa-calendar"/> Events |
|:--------------------------------------------|:---------------------------------------------------|:-----------------------------------------------|
| [initiated](#initiated)                     | [create()](#create)                                | [chapterStarted](#chapterStarted)              |
| [nodes](#nodes)                             | [createNode()](#createNode)                        | [chaptersLoaded](#chaptersLoaded)              |
| [options](#options)                         | [decodeTrack()](#decodeTrack)                      | [debug](#debug)                                |
| [players](#players)                         | [decodeTracks()](#decodeTracks)                    | [nodeConnect](#nodeConnect)                    |
|                                             | [destroy()](#destroy)                              | [nodeCreate](#nodeCreate)                      |
|                                             | [destroyNode()](#destroyNode)                      | [nodeDestroy](#nodeDestroy)                    |
|                                             | [get()](#get)                                      | [nodeDisconnect](#nodeDisconnect)              |
|                                             | [handleShutdown()](#handleShutdown)                | [nodeError](#nodeError)                        |
|                                             | [init()](#init)                                    | [nodeRaw](#nodeRaw)                            |
|                                             | [loadPlayerStates()](#loadPlayerStates)            | [nodeReconnect](#nodeReconnect)                |
|                                             | [on()](#on)                                        | [playerCreate](#playerCreate)                  |
|                                             | [savePlayerState()](#savePlayerState)              | [playerDestroy](#playerDestroy)                |
|                                             | [search()](#search)                                | [playerDisconnect](#playerDisconnect)          |
|                                             | [updateVoiceState()](#updateVoiceState)            | [playerMove](#playerMove)                      |
|                                             | [useableNode()](#useableNode)                      | [playerStateUpdate](#playerStateUpdate)        |
|                                             |                                                    | [queueEnd](#queueEnd)                          |
|                                             |                                                    | [segmentSkipped](#segmentSkipped)              |
|                                             |                                                    | [segmentsLoaded](#segmentsLoaded)              |
|                                             |                                                    | [socketClosed](#socketClosed)                  |
|                                             |                                                    | [trackEnd](#trackEnd)                          |
|                                             |                                                    | [trackError](#trackError)                      |
|                                             |                                                    | [trackStart](#trackStart)                      |
|                                             |                                                    | [trackStuck](#trackStuck)                      |

## Properties {#properties}

### initiated {#initiated}

> Has the manager been initiated?
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [boolean](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean)

---

### players {#players}

<span className="info badge">readonly</span>

> The map of players.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [Collection](https://discord.js.org/docs/packages/collection/main/Collection:class)\<[string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String), [`Player`](./Player.mdx)>

---

### nodes {#nodes}

<span className="info badge">readonly</span>

> The map of nodes.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [Collection](https://discord.js.org/docs/packages/collection/main/Collection:class)\<[string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String), [`Node`](./Node.mdx)>

---

### options {#options}

<span className="info badge">readonly</span>

> The options that were set.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [`managerOptions{}`](../Typedefs/Manager/managerOptions.mdx#managerOptions)

## Methods {#methods}

### create(options) {#create}

> Creates a player or returns one if it already exists.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [`Player`](./Player.mdx)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                  | <i className="fa-solid fa-list"/> Description | <i className="fa-solid fa-flask"/> Optional |
> |:-----------------------------------------------|:------------------------------------------------------------------------|:----------------------------------------------|:-------------------------------------------:|
> | `options`                                      | [`playerOptions{}`](../Typedefs/Player/playerOptions.mdx#playerOptions) | The options to create the player with.        |     <i className="fa-solid fa-xmark"/>      |

---

### createNode(options) {#createNode}

> Creates a new node or returns an existing one if it already exists.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [`Node`](../Classes/Node.mdx)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                          | <i className="fa-solid fa-list"/> Description | <i className="fa-solid fa-flask"/> Optional |
> |:-----------------------------------------------|:----------------------------------------------------------------|:----------------------------------------------|:-------------------------------------------:|
> | `options`                                      | [`nodeOptions{}`](../Typedefs/Node/nodeOptions.mdx#nodeOptions) | The options to create the node with.          |     <i className="fa-solid fa-xmark"/>      |

---

### decodeTrack(track) {#decodeTrack}

> Decodes a base64 encoded track and returns a TrackData.
>
> Return: [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)[\<`trackData{}`>](../Typedefs/Track/trackData.mdx#trackData)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                  | <i className="fa-solid fa-list"/> Description | <i className="fa-solid fa-flask"/> Optional |
> |:-----------------------------------------------|:------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:----------------------------------------------|:-------------------------------------------:|
> | `track`                                        | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [`base64`](https://developer.mozilla.org/en-US/docs/Glossary/Base64) | The base64 encoded track string.              |     <i className="fa-solid fa-xmark"/>      |

---

### decodeTracks(tracks) {#decodeTracks}

> Decodes an array of base64 encoded tracks and returns an array of TrackData.<br/>
> Emits a debug event with the tracks being decoded.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)[\<`trackData{}[]`>](../Typedefs/Track/trackData.mdx#trackData)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                    | <i className="fa-solid fa-list"/> Description | <i className="fa-solid fa-flask"/> Optional |
> |:-----------------------------------------------|:--------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:----------------------------------------------|:-------------------------------------------:|
> | `tracks`                                       | [string[]](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [`base64`](https://developer.mozilla.org/en-US/docs/Glossary/Base64) | The base64 encoded track string.              |     <i className="fa-solid fa-xmark"/>      |

---

### destroy(guildId) {#destroy}

> Destroys a player if it exists and cleans up inactive players.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [void](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                                    | <i className="fa-solid fa-list"/> Description | <i className="fa-solid fa-flask"/> Optional |
> |:-----------------------------------------------|:------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:----------------------------------------------|:-------------------------------------------:|
> | `guildId`                                      | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [`Guild.id`](https://discord.js.org/docs/packages/discord.js/14.17.3/Guild:Class#id) | The guild ID of the player to destroy.        |     <i className="fa-solid fa-xmark"/>      |

---

### destroyNode(identifier) {#destroyNode}

> Destroys a node if it exists. Emits a debug event if the node is found and destroyed.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [void](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                 | <i className="fa-solid fa-list"/> Description | <i className="fa-solid fa-flask"/> Optional |
> |:-----------------------------------------------|:-----------------------------------------------------------------------------------------------------------------------------------------------------------------------|:----------------------------------------------|:-------------------------------------------:|
> | `identifier`                                   | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [`Node.identifier`](../Typedefs/Node/nodeOptions.mdx#nodeOptions) | The identifier of the node to destroy.        |     <i className="fa-solid fa-xmark"/>      |

---

### init(clientId) {#init}

> Initiates the Manager.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [this](#properties)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                                              | <i className="fa-solid fa-list"/> Description | <i className="fa-solid fa-flask"/> Optional |
> |:-----------------------------------------------|:----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:----------------------------------------------|:-------------------------------------------:|
> | `clientId`                                     | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [`ClientUser.id`](https://discord.js.org/docs/packages/discord.js/14.17.3/ClientUser:Class#id) | The Discord client ID (required).             |     <i className="fa-solid fa-xmark"/>      |

---

### loadPlayerStates(nodeId) {#loadPlayerStates}

> Loads player states from the JSON file.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [void](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                 | <i className="fa-solid fa-list"/> Description             | <i className="fa-solid fa-flask"/> Optional |
> |:-----------------------------------------------|:-----------------------------------------------------------------------------------------------------------------------------------------------------------------------|:----------------------------------------------------------|:-------------------------------------------:|
> | `nodeId`                                       | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [`Node.identifier`](../Typedefs/Node/nodeOptions.mdx#nodeOptions) | The ID of the node to load player states from (required). |     <i className="fa-solid fa-xmark"/>      |

---

### get(guildId) {#get}

> Returns a player or undefined if it does not exist.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [`Player`](./Player.mdx) | [undefined](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Undefined)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                                    | <i className="fa-solid fa-list"/> Description | <i className="fa-solid fa-flask"/> Optional |
> |:-----------------------------------------------|:------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:----------------------------------------------|:-------------------------------------------:|
> | `guildId`                                      | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [`Guild.id`](https://discord.js.org/docs/packages/discord.js/14.17.3/Guild:Class#id) | The guild ID of the player to retrieve.       |     <i className="fa-solid fa-xmark"/>      |

---

### handleShutdown() {#handleShutdown}

> Handles the shutdown of the process by saving all active player's states and optionally cleaning up inactive players.<br/><br/>
> This function is called when the process is about to exit.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)[\<void>](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)

---

### on(event, listener: () => \{}) {#on}

> Attaches an event listener to the manager.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [this](#properties)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                | <i className="fa-solid fa-list"/> Description   | <i className="fa-solid fa-flask"/> Optional |
> |:-----------------------------------------------|:------------------------------------------------------------------------------------------------------|:------------------------------------------------|:-------------------------------------------:|
> | `event`                                        | [<i className="fa-solid fa-bars-staggered" /> ManagerEventType](../Enums/ManagerEventTypes.mdx)       | The event to listen for.                        |     <i className="fa-solid fa-xmark"/>      |
> | `listener`                                     | [function](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function) | The function to call when the event is emitted. |     <i className="fa-solid fa-xmark"/>      |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on('trackStart', (player, track) => {
            console.log(`Now playing ${track.title} in ${player.guildId}`);
        });
        ```
    </TabItem>

</Tabs>

---

### savePlayerState(guildId) {#savePlayerState}

> Saves player states to the JSON file.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [void](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                                 | <i className="fa-solid fa-list"/> Description | <i className="fa-solid fa-flask"/> Optional |
> |:-----------------------------------------------|:---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:----------------------------------------------|:-------------------------------------------:|
> | `guildId`                                      | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [GuildId](https://discord.js.org/docs/packages/discord.js/14.17.3/Guild:Class#id) | The guild ID of the player to save            |     <i className="fa-solid fa-xmark"/>      |

---

### search(query, requester) {#search}

> Searches the enabled sources based off the URL or the `source` property.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)[\<`searchResult{}`>](../Typedefs/Search/searchResult.mdx#searchResult)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                 | <i className="fa-solid fa-list"/> Description | <i className="fa-solid fa-flask"/> Optional |
> |:-----------------------------------------------|:-----------------------------------------------------------------------------------------------------------------------------------------------------------------------|:----------------------------------------------|:-------------------------------------------:|
> | `query`                                        | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) \| [`searchQuery{}`](../Typedefs/Search/searchQuery.mdx#searchQuery) | Query to search.                              |     <i className="fa-solid fa-xmark"/>      |
> | `requester`                                    | [User](https://discord.js.org/docs/packages/discord.js/14.17.3/User:Class) \| [ClientUser](https://discord.js.org/docs/packages/discord.js/14.17.3/ClientUser:Class)   | The user who requested the track.             |     <i className="fa-solid fa-check"/>      |

---

### updateVoiceState(data) {#updateVoiceState}

> Sends voice data to the Lavalink server.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)[\<void>](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type   | <i className="fa-solid fa-list"/> Description | <i className="fa-solid fa-flask"/> Optional |
> | :--------------------------------------------- | :--------------------------------------- | :-------------------------------------------- | :-----------------------------------------: |
> | `data`                                         | VoicePacket \| VoiceServer \| VoiceState | The timescale options to apply.               |    <i className="fa-solid fa-xmark"/>      |

<Tabs>
    <TabItem value="Example required for use" label="Example required to use" default>
        ```js
        const { Client, Events } = require('discord.js');
        const { Manager } = require('magmastream');

        const client = new Client({
            ...ClientOptions
        })

        const manager = new Manager({
            ...ManagerOptions
        })

        // Required for magmastream to work
        client.on(Events.Raw, (data) => {
            manager.updateVoiceState(data);
        })
        ```
    </TabItem>

</Tabs>

---

### useableNode() {#useableNode}

<span className="info badge">get</span>

> Returns the node to use based on the configured [useNode](#constructor) and [usePriority](#constructor) options.<br/><br/>
> If [usePriority](#constructor) is true, the node is chosen based on priority, otherwise it is chosen based on the [useNode](#constructor) option.<br/>
> If [useNode](#constructor) is "leastLoad", the node with the lowest load is chosen, if it is "leastPlayers", the node with the fewest players is chosen.<br/>
> If [usePriority](#constructor) is false and [useNode](#constructor) is not set, the node with the lowest load is chosen.
>
> Return: [`Node`](./Node.mdx)

## Events {#events}

### ChapterStarted

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> ChapterStarted](../Enums/ManagerEventTypes.mdx#chapterStarted)</span>

> Emitted when a track has started a chapter.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                   |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                                                 |
> | `track`                                        | [`track{}`](../Typedefs/Track/trackOptions.mdx#trackOptions) \| [`unresolvedTrack{}`](../Typedefs/Track/unresolvedTrack.mdx#unresolvedTrack) |
> | `payload`                                      | [`SponsorBlockChapterStarted{}`](../Typedefs/SponsorBlock/sponsorBlockChapterStarted.mdx#sponsorBlockChapterStarted)                |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.ChapterStarted, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### ChaptersLoaded

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> ChaptersLoaded](../Enums/ManagerEventTypes.mdx#chaptersLoaded)</span>

> Emitted when a track has loaded chapters.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                   |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                                                 |
> | `track`                                        | [`track{}`](../Typedefs/Track/trackOptions.mdx#trackOptions) \| [`unresolvedTrack{}`](../Typedefs/Track/unresolvedTrack.mdx#unresolvedTrack) |
> | `payload`                                      | [`SponsorBlockChaptersLoaded{}`](../Typedefs/SponsorBlock/sponsorBlockChaptersLoaded.mdx#sponsorBlockChaptersLoaded)                |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.ChapterStarted, (player, track, payload) => {
        //Your code
    })
        ```
    </TabItem>

</Tabs>

---

### Debug

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> Debug](../Enums/ManagerEventTypes.mdx#debug)</span>

> Emitted when a track has loaded chapters.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                            |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------ |
> | `info`                                         | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
        ...ManagerOptions
    })

        manager.on(ManagerEventTypes.Debug, (info) => {
            console.log(`Debug from magmastream: ${info}`);
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### NodeConnect

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> NodeConnect](../Enums/ManagerEventTypes.mdx#nodeConnect)</span>

> Emitted when a Node connects.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type |
> | :--------------------------------------------- | :------------------------------------- |
> | `node`                                         | [`Node`](./Node.mdx)                   |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.NodeConnect, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### NodeCreate

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> NodeCreate](../Enums/ManagerEventTypes.mdx#nodeCreate)</span>

> Emitted when a Node is created.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type |
> | :--------------------------------------------- | :------------------------------------- |
> | `node`                                         | [`Node`](./Node.mdx)                   |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.NodeCreate, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### NodeDestroy

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> NodeDestroy](../Enums/ManagerEventTypes.mdx#nodeDestroy)</span>

> Emitted when a Node is destroyed.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type |
> | :--------------------------------------------- | :------------------------------------- |
> | `node`                                         | [`Node`](./Node.mdx)                   |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.NodeDestroy, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### NodeDisconnect

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> NodeDisconnect](../Enums/ManagerEventTypes.mdx#nodeDisconnect)</span>

> Emitted when a Node is disconnects.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                                                                  |
> | :--------------------------------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
> | `node`                                         | [`Node`](./Node.mdx)                                                                                                                                                                                                    |
> | `reason`                                       | \{ code: [number](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number), reason: [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) } |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.NodeDisconnect, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### NodeError

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> NodeError](../Enums/ManagerEventTypes.mdx#nodeError)</span>

> Emitted when a Node has an error.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                          |
> | :--------------------------------------------- | :---------------------------------------------------------------------------------------------- |
> | `node`                                         | [`Node`](./Node.mdx)                                                                            |
> | `error`                                        | [Error](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.NodeError, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### NodeRaw

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> NodeRaw](../Enums/ManagerEventTypes.mdx#nodeRaw)</span>

> Emitted whenever any Lavalink event is received.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type |
> | :--------------------------------------------- | :------------------------------------- |
> | `payload`                                      | unknown                                |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.NodeRaw, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### NodeReconnect

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> NodeReconnect](../Enums/ManagerEventTypes.mdx#nodeReconnect)</span>

> Emitted when a Node reconnects.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type |
> | :--------------------------------------------- | :------------------------------------- |
> | `node`                                         | [`Node`](./Node.mdx)                   |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.NodeReconnect, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### PlayerCreate

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> PlayerCreate](../Enums/ManagerEventTypes.mdx#playerCreate)</span>

> Emitted when a player is created.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type |
> | :--------------------------------------------- | :------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)               |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.PlayerCreate, (player) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### PlayerDestroy

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> PlayerDestroy](../Enums/ManagerEventTypes.mdx#playerDestroy)</span>

> Emitted when a player is destroyed.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type |
> | :--------------------------------------------- | :------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)               |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.PlayerDestroy, (player) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### PlayerDisconnect

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> PlayerDisconnect](../Enums/ManagerEventTypes.mdx#playerDisconnect)</span>

> Emitted when a Player disconnects.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                                               |
> | :--------------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                                                                                                                                             |
> | `oldChannel`                                   | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [GuildChannelId](https://discord.js.org/docs/packages/discord.js/14.17.3/GuildChannel:Class#id) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.PlayerDisconnect, (player, oldChannel) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### PlayerMove

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> PlayerMove](../Enums/ManagerEventTypes.mdx#playerMove)</span>

> Emitted when a player is moved to a new voice channel.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                                                                                                               |
> | :--------------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                                                                                                                                             |
> | `initChannel`                                  | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [GuildChannelId](https://discord.js.org/docs/packages/discord.js/14.17.3/GuildChannel:Class#id) |
> | `newChannel`                                   | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) as [GuildChannelId](https://discord.js.org/docs/packages/discord.js/14.17.3/GuildChannel:Class#id) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.NodeDisconnect, (player, initChannel, newChannel) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### PlayerStateUpdate

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> PlayerStateUpdate](../Enums/ManagerEventTypes.mdx#playerStateUpdate)</span>

> Emitted when the state of the player has been changed either player paused/resumed or the loop modes have been toggled on or off.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                 |
> | :--------------------------------------------- | :--------------------------------------------------------------------- |
> | `oldPlayer`                                    | [`Player`](./Player.mdx)                                               |
> | `newPlayer`                                    | [`Player`](./Player.mdx)                                               |
> | `changeType`                                   | [`playerStateUpdateEvent{}`](../Typedefs/Player/playerStateUpdate.mdx#playerStateUpdate) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.PlayerStateUpdate, (oldPlayer, newPlayer, changeType) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### QueueEnd

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> QueueEnd](../Enums/ManagerEventTypes.mdx#queueEnd)</span>

> Emitted when a player queue ends.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                |
> | :--------------------------------------------- | :---------------------------------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                                              |
> | `track`                                        | [`track{}`](../Typedefs/Track/trackOptions.mdx#trackOptions) \| [`unresolvedTrack{}`](../Typedefs/Track/unresolvedTrack.mdx#unresolvedTrack) |
> | `payload`                                      | [`TrackEndEvent{}`](../Typedefs/Track/trackEndEvent.mdx#trackEndEvent)                                              |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.QueueEnd, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### SegmentSkipped

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> SegmentSkipped](../Enums/ManagerEventTypes.mdx#segmentSkipped)</span>

> Emitted when a track has skipped a segment.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                             |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                                           |
> | `track`                                        | [`track{}`](../Typedefs/Track/trackOptions.mdx#trackOptions) \| [`unresolvedTrack{}`](../Typedefs/Track/unresolvedTrack.mdx#unresolvedTrack) |
> | `payload`                                      | [`SponsorBlockSegmentSkipped{}`](../Typedefs/SponsorBlock/sponsorBlockSegmentSkipped.mdx#sponsorBlockSegmentSkipped)          |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.SegmentSkipped, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### SegmentsLoaded

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> SegmentsLoaded](../Enums/ManagerEventTypes.mdx#segmentsLoaded)</span>

> Emitted when a track has loaded segments.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                             |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                                           |
> | `track`                                        | [`track{}`](../Typedefs/Track/trackOptions.mdx#trackOptions) \| [`unresolvedTrack{}`](../Typedefs/Track/unresolvedTrack.mdx#unresolvedTrack) |
> | `payload`                                      | [`SponsorBlockSegmentsLoaded{}`](../Typedefs/SponsorBlock/sponsorBlockSegmentsLoaded.mdx#sponsorBlockSegmentsLoaded)          |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.SegmentsLoaded, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### SocketClosed

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> SocketClosed](../Enums/ManagerEventTypes.mdx#socketClosed)</span>

> Emitted when a voice connection is closed.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                     |
> | :--------------------------------------------- | :------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                   |
> | `payload`                                      | [`WebSocketClosedEvent{}`](../Typedefs/WebSocket.mdx#webSocketClosedEvent) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.SocketClosed, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### TrackEnd

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> TrackEnd](../Enums/ManagerEventTypes.mdx#trackEnd)</span>

> Emitted when a track ends.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                   |
> | :--------------------------------------------- | :------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                   |
> | `track`                                        | [`track{}`](../Typedefs/Track/trackOptions.mdx#trackOptions)                 |
> | `payload`                                      | [`TrackEndEvent{}`](../Typedefs/Track/trackEndEvent.mdx#trackEndEvent) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.TrackEnd, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### TrackError

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> TrackError](../Enums/ManagerEventTypes.mdx#trackError)</span>

> Emitted when a track has an error during playback.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                                   |
> | :--------------------------------------------- | :------------------------------------------------------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                                                                   |
> | `track`                                        | [`track{}`](../Typedefs/Track/trackOptions.mdx#trackOptions) \| [`unresolvedTrack{}`](../Typedefs/Track/unresolvedTrack.mdx#unresolvedTrack) |
> | `payload`                                      | [`TrackExceptionEvent{}`](../Typedefs/Track/trackExceptionEvent.mdx#trackExceptionEvent)                                     |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.TrackError, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### TrackStart

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> TrackStart](../Enums/ManagerEventTypes.mdx#trackStart)</span>

> Emitted when a track starts.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                       |
> | :--------------------------------------------- | :----------------------------------------------------------- |
> | `player`                                       | [`Player`](./Player.mdx)                                       |
> | `track`                                        | [`track{}`](../Typedefs/Track/trackOptions.mdx#trackOptions)                     |
> | `payload`                                      | [`TrackStartEvent{}`](../Typedefs/Track/trackStartEvent.mdx#trackStartEvent) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.TrackStart, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>

---

### TrackStuck

<span className="info badge">[ManagerEventTypes : <i className="fa-solid fa-bars-staggered" /> TrackStuck](../Enums/ManagerEventTypes.mdx#trackStuck)</span>

> Emitted when a track gets stuck during playback.
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                       |
> | :--------------------------------------------- | :----------------------------------------------------------- |
> | `player`                                       | [`Player`](./Node.mdx)                                       |
> | `track`                                        | [`track{}`](../Typedefs/Track/trackOptions.mdx#trackOptions)                     |
> | `payload`                                      | [`TrackStuckEvent{}`](../Typedefs/Track/trackStuckEvent.mdx#trackStuckEvent) |

<Tabs>
    <TabItem value="Example usage" label="Example usage" default>
        ```js
        const { Manager, ManagerEventTypes } = require('magmastream');

        const manager = new Manager({
            ...ManagerOptions
        })

        manager.on(ManagerEventTypes.TrackStuck, (player, track, payload) => {
            //Your code
        })
        ```
    </TabItem>

</Tabs>
